--- a/style.css
+++ b/style.css
@@ -90,11 +90,20 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
+}
+
+
+
+
 .light #switch button {
-    right: 0;
-    left: initial;
+  animation: slide-in 0.2s forwards;
 }
 
 
@@ -188,5 +197,28 @@ ul li a:hover {
 
     .light {
         --bg-url: url(./assets2/bg-desktop-light.jpg);
+    }
+}
+
+
+/* animations */
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to { 
+        left: 50%;
+    }
+}
+
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    
+    to {
+        left: 0;
     }
 }
